# minetotg

./: LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
src/minetotg/: __init__.py  __main__.py  main.py
src/minetotg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
