[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minetotg"
version = "1.0.1"
authors = [
  { name="R0boji", email="roboji.public@internet.ru" },
]
description = "A tool that reformat string with Minecraft text formatting to Telegram HTML."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["Telegram", "Formatting", "Minecraft"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
     "Development Status :: 5 - Production/Stable"
]

[project.urls]
Homepage = "https://github.com/R0boji/minetotg"
Issues = "https://github.com/R0boji/minetotg/issues"
GitVerse = "https://gitverse.ru/roboji/minetotg"